feat: created difficult times endpoints
